--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,6 +38,9 @@ jobs:
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
+        with:
+          # Automatically enable GitHub Pages
+          enablement: true
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
